--- a/css/soirees.css
+++ b/css/soirees.css
@@ -47,7 +47,7 @@
 
 .event-image img {
     width: 100%;
-    height: 180px;
+    height: auto;
     object-fit: cover;
     display: block;
     opacity: .95;
