--- a/css/styles.css
+++ b/css/styles.css
@@ -90,11 +90,11 @@ header {
 
 nav ul {
   display: flex;
+  justify-content: center;
   gap: 18px;
   list-style: none;
-  margin: 0;
+  margin-right: 50%;
   padding: 0;
-  align-items: center;
 }
 
 nav a {
@@ -177,7 +177,6 @@ nav a:hover {
 }
 
 .hero-left:before {
-  content: "";
   position: absolute;
   inset: -120px -140px auto auto;
   width: 340px;
